; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_table.c_pfr_detach_table.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_table.c_pfr_detach_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pfr_ktable = type { i64*, i32 }

@pf_lock = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@PFR_REFCNT_RULE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [34 x i8] c"pfr_detach_table: refcount = %d.\0A\00", align 1
@PFR_TFLAG_REFERENCED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pfr_detach_table(%struct.pfr_ktable* %0) #0 {
  %2 = alloca %struct.pfr_ktable*, align 8
  store %struct.pfr_ktable* %0, %struct.pfr_ktable** %2, align 8
  %3 = load i32, i32* @pf_lock, align 4
  %4 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %5 = call i32 @LCK_MTX_ASSERT(i32 %3, i32 %4)
  %6 = load %struct.pfr_ktable*, %struct.pfr_ktable** %2, align 8
  %7 = getelementptr inbounds %struct.pfr_ktable, %struct.pfr_ktable* %6, i32 0, i32 0
  %8 = load i64*, i64** %7, align 8
  %9 = load i64, i64* @PFR_REFCNT_RULE, align 8
  %10 = getelementptr inbounds i64, i64* %8, i64 %9
  %11 = load i64, i64* %10, align 8
  %12 = icmp sle i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %1
  %14 = load %struct.pfr_ktable*, %struct.pfr_ktable** %2, align 8
  %15 = getelementptr inbounds %struct.pfr_ktable, %struct.pfr_ktable* %14, i32 0, i32 0
  %16 = load i64*, i64** %15, align 8
  %17 = load i64, i64* @PFR_REFCNT_RULE, align 8
  %18 = getelementptr inbounds i64, i64* %16, i64 %17
  %19 = load i64, i64* %18, align 8
  %20 = call i32 @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i64 %19)
  br label %40

21:                                               ; preds = %1
  %22 = load %struct.pfr_ktable*, %struct.pfr_ktable** %2, align 8
  %23 = getelementptr inbounds %struct.pfr_ktable, %struct.pfr_ktable* %22, i32 0, i32 0
  %24 = load i64*, i64** %23, align 8
  %25 = load i64, i64* @PFR_REFCNT_RULE, align 8
  %26 = getelementptr inbounds i64, i64* %24, i64 %25
  %27 = load i64, i64* %26, align 8
  %28 = add nsw i64 %27, -1
  store i64 %28, i64* %26, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %39, label %30

30:                                               ; preds = %21
  %31 = load %struct.pfr_ktable*, %struct.pfr_ktable** %2, align 8
  %32 = load %struct.pfr_ktable*, %struct.pfr_ktable** %2, align 8
  %33 = getelementptr inbounds %struct.pfr_ktable, %struct.pfr_ktable* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 8
  %35 = load i32, i32* @PFR_TFLAG_REFERENCED, align 4
  %36 = xor i32 %35, -1
  %37 = and i32 %34, %36
  %38 = call i32 @pfr_setflags_ktable(%struct.pfr_ktable* %31, i32 %37)
  br label %39

39:                                               ; preds = %30, %21
  br label %40

40:                                               ; preds = %39, %13
  ret void
}

declare dso_local i32 @LCK_MTX_ASSERT(i32, i32) #1

declare dso_local i32 @printf(i8*, i64) #1

declare dso_local i32 @pfr_setflags_ktable(%struct.pfr_ktable*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
